--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "browserify": "11.2.0",
     "connect-history-api-fallback": "1.1.0",
     "firebase": "2.3.1",
-    "gulp": "3.9.0",
+    "gulp": "3.9.1",
     "gulp-autoprefixer": "3.1.0",
     "gulp-notify": "2.2.0",
     "gulp-rename": "1.2.2",
@@ -26,14 +26,16 @@
     "history": "1.12.5",
     "install": "0.1.8",
     "re-base": "1.2.1",
-    "react": "^0.14.2",
-    "react-addons-css-transition-group": "0.14.0",
+    "react": "15.3.1",
+    "react-addons-css-transition-group": "15.3.1",
     "react-catalyst": "0.3.0",
-    "react-dom": "0.14.0",
+    "react-dom": "15.3.1",
     "react-mixin": "3.0.0",
     "react-router": "1.0.0-rc4",
     "vinyl-buffer": "1.0.0",
     "vinyl-source-stream": "1.1.0",
-    "watchify": "3.4.0"
+    "watchify": "3.4.0",
+    "material-ui": "^0.15.4",
+    "react-tap-event-plugin": "^1.0.0"
   }
 }
