--- a/package.json
+++ b/package.json
@@ -36,6 +36,8 @@
     "vinyl-source-stream": "1.1.0",
     "watchify": "3.4.0",
     "material-ui": "^0.15.4",
-    "react-tap-event-plugin": "^1.0.0"
+    "react-tap-event-plugin": "^1.0.0",
+    "formsy-material-ui": "^0.5.0",
+    "formsy-react": "^0.18.1"
   }
 }
