--- a/package.json
+++ b/package.json
@@ -38,9 +38,7 @@
     "material-ui": "^0.15.4",
     "react-tap-event-plugin": "^1.0.0",
     "formsy-material-ui": "^0.5.0",
-    "formsy-react": "^0.18.1"
-  },
-  "dependencies": {
-    "react-d3-map": "^0.8.3"
+    "formsy-react": "^0.18.1",
+    "react-google-maps": "^4.11.0"
   }
 }
