--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "react-tap-event-plugin": "^1.0.0",
     "formsy-material-ui": "^0.5.0",
     "formsy-react": "^0.18.1",
+    "react-d3-map": "^0.8.3",
     "react-google-maps": "^4.11.0"
   }
 }
