--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "browser-sync": "2.9.11",
     "browserify": "11.2.0",
     "connect-history-api-fallback": "1.1.0",
-    "firebase": "2.3.1",
+    "firebase": "^3.0.0",
     "gulp": "3.9.1",
     "gulp-autoprefixer": "3.1.0",
     "gulp-notify": "2.2.0",
