--- a/client/package.json
+++ b/client/package.json
@@ -41,5 +41,8 @@
     "formsy-react": "^0.18.1",
     "react-d3-map": "^0.8.3",
     "react-google-maps": "^4.11.0"
+  },
+  "dependencies": {
+    "axios": "^0.15.3"
   }
 }
