filters update rules
rules explore.js state is flexibly updated if filter is
added/changed/removed; tried to implement react-input-range for
latitude filter and failed, see LatitudeFilter.js

--- a/client/package.json
+++ b/client/package.json
@@ -43,6 +43,7 @@
     "react-google-maps": "^4.11.0"
   },
   "dependencies": {
-    "axios": "^0.15.3"
+    "axios": "^0.15.3",
+    "rc-slider": "^6.1.2"
   }
 }
