--- a/client/package.json
+++ b/client/package.json
@@ -44,6 +44,8 @@
   },
   "dependencies": {
     "axios": "^0.15.3",
-    "rc-slider": "^6.1.2"
+    "d3": "^3.5.17",
+    "rc-slider": "^6.1.2",
+    "rd3": "^0.7.4"
   }
 }
