Bunch of cleanup

--- a/.gitignore
+++ b/.gitignore
@@ -1,90 +1,12 @@
 client/build/*
 .DS_Store
 client/node_modules/*
-DataScraping/archive/reprocess_chunk4.py
-
-DataScraping/archive/remaining_uids.csv
-
-DataScraping/archive/BioSample_SRA_ScrapeFull.ipynb
-
-DataScraping/archive/ERRORLOG_Genbank_lowapi_parallel.csv
-
-DataScraping/archive/ERRORLOG_Genbank_update_chunk1_20170222.csv
-
-DataScraping/archive/ERRORLOG_Genbank_update_chunk1_20170222.csv
-
-DataScraping/archive/ERRORLOG_Genbank_update_chunk2_20170222.csv
-
-DataScraping/archive/ERRORLOG_Genbank_update_chunk4_20170223.csv
-
-DataScraping/archive/Genbank_lowapi.ipynb
-
-DataScraping/archive/Genbank_lowapi.py
-
-DataScraping/archive/Genbank_update_chunks.py
-
-DataScraping/archive/Genbank_update_parallel.py
-
-DataScraping/archive/GenbankMixS_scrape_np.py
-
-DataScraping/archive/GenbankMixS_scrape_parallel.py
-
-DataScraping/archive/merge_sframes.py
-
-DataScraping/archive/generate_uid_lists.py
-
-DataScraping/archive/METADATA_chunk1_sframe/dir_archive.ini
-
-DataScraping/archive/METADATA_chunk1_sframe/m_47f0986d0be53583.0000
-
-DataScraping/archive/METADATA_chunk1_sframe/m_47f0986d0be53583.sidx
-
+DataScraping/archive/*
 *.0000
-
 *.frame_idx
-
 *.sidx
-
-DataScraping/archive/METADATA_chunk1_sframe/objects.bin
-
-DataScraping/archive/METADATA_chunk2_sframe/dir_archive.ini
-
 *.csv
-
 *.ini
-
-DataScraping/archive/run_genbank_chunks.sh
-
-DataScraping/archive/METADATA_chunk2_sframe/objects.bin
-
-DataScraping/archive/METADATA_chunk4_sframe/objects.bin
-
-DataScraping/archive/METADATA_metaseek_sframe/objects.bin
-
-DataScraping/archive/METADATA_lowapi_sframe/objects.bin
-
-DataScraping/archive/METADATA_MGRAST_sframe/objects.bin
-
-DataScraping/archive/SRA_Scrape.py
-
 *.docx
-
 *.xls
-
 *.ipynb
-
-DataScraping/MGRAST/MGRAST_scrape.py
-
-DataScraping/iMicrobe/iMicrobe_scrape_np.py
-
-DataScraping/Genbank/merge_insdc_scrapes.py
-
-DataScraping/Genbank/make_metaseek_insdc.py
-
-DataScraping/Genbank/merge_scrapes_fns.py
-
-DataScraping/db_sample_data/objects.bin
-
-DataScraping/current_metaseek_colsandtypes.py
-
-DataScraping/MetaSeekColumnLabels.py
