Add gulp-html-replace to keep local gulp happy alongside deployable build folder

--- a/client/package.json
+++ b/client/package.json
@@ -16,8 +16,11 @@
     "browserify": "11.2.0",
     "connect-history-api-fallback": "1.1.0",
     "firebase": "^3.0.0",
+    "formsy-material-ui": "^0.5.0",
+    "formsy-react": "^0.18.1",
     "gulp": "3.9.1",
     "gulp-autoprefixer": "3.1.0",
+    "gulp-html-replace": "^1.6.2",
     "gulp-notify": "2.2.0",
     "gulp-rename": "1.2.2",
     "gulp-stylus": "2.1.0",
@@ -25,22 +28,20 @@
     "gulp-util": "3.0.7",
     "history": "1.12.5",
     "install": "0.1.8",
+    "material-ui": "^0.15.4",
     "re-base": "1.2.1",
     "react": "15.3.1",
     "react-addons-css-transition-group": "15.3.1",
     "react-catalyst": "0.3.0",
+    "react-d3-map": "^0.8.3",
     "react-dom": "15.3.1",
+    "react-google-maps": "^4.11.0",
     "react-mixin": "3.0.0",
     "react-router": "2.5.2",
+    "react-tap-event-plugin": "^1.0.0",
     "vinyl-buffer": "1.0.0",
     "vinyl-source-stream": "1.1.0",
-    "watchify": "3.4.0",
-    "material-ui": "^0.15.4",
-    "react-tap-event-plugin": "^1.0.0",
-    "formsy-material-ui": "^0.5.0",
-    "formsy-react": "^0.18.1",
-    "react-d3-map": "^0.8.3",
-    "react-google-maps": "^4.11.0"
+    "watchify": "3.4.0"
   },
   "dependencies": {
     "axios": "^0.15.3",
