Add Google Analytics

--- a/client/package.json
+++ b/client/package.json
@@ -49,6 +49,7 @@
     "axios": "^0.15.3",
     "d3": "^3.5.17",
     "rc-slider": "^6.1.2",
-    "rd3": "^0.7.4"
+    "rd3": "^0.7.4",
+    "react-ga": "^2.1.2"
   }
 }
