extract and merge MIxS fields in scrapers
update functions; add extract and merge fn; add redundant field rules
in rules.json; (some incomplete error handling generated during
testing, to do better later)

--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,7 @@ DataScraping/*
 *.pem
 
 client/build/index.html
+
+server/scrapers/SRA/subset_testdf_sframe/objects.bin
+
+server/scrapers/SRA/subset_testdf.txt
