Simple Victory example
Maybe we should use Victory instead?

http://formidable.com/open-source/victory/gallery

https://formidable.com/open-source/victory/guides/tooltips#tooltips-with
-victoryvoronoicontainer

--- a/client/package.json
+++ b/client/package.json
@@ -48,8 +48,10 @@
   "dependencies": {
     "axios": "^0.15.3",
     "d3": "^3.5.17",
+    "prop-types": "^15.5.10",
     "rc-slider": "^6.1.2",
     "rd3": "^0.7.4",
-    "react-ga": "^2.1.2"
+    "react-ga": "^2.1.2",
+    "victory": "^0.21.0"
   }
 }
