--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -2,6 +2,7 @@ Flask==0.12
 Flask_Cors==3.0.2
 Flask_RESTful==0.3.5
 Flask_SQLAlchemy==2.2
+Flask-Migrate==1.0
 cython==0.25.2
 pandas
 beautifulsoup4==4.5.3
