--- a/client/package.json
+++ b/client/package.json
@@ -41,6 +41,7 @@
     "react-mixin": "3.0.0",
     "react-router": "2.5.2",
     "react-tap-event-plugin": "^1.0.0",
+    "reactify": "^1.1.1",
     "vinyl-buffer": "1.0.0",
     "vinyl-source-stream": "1.1.0",
     "watchify": "3.4.0"
