--- a/client/package.json
+++ b/client/package.json
@@ -42,6 +42,7 @@
     "react-router": "2.5.2",
     "react-tap-event-plugin": "^1.0.0",
     "reactify": "^1.1.1",
+    "uglifyify": "^4.0.1",
     "vinyl-buffer": "1.0.0",
     "vinyl-source-stream": "1.1.0",
     "watchify": "3.4.0"
