Store deploy secrets in (gitignored) secrets.py

--- a/.gitignore
+++ b/.gitignore
@@ -20,6 +20,7 @@ client/node_modules/*
 client/build/index.html
 
 server/bootstrapData/
+server/secrets.py
 
 server/scrapers/SRA/subset_testdf.txt
 metaseek_schema.txt
