--- a/client/package.json
+++ b/client/package.json
@@ -4,7 +4,7 @@
   "description": "MetaSeek is a data discovery and analysis tool for genome sequencing data. Providing a rich front-end for exploration of metadata across a wide set of data repositories, use MetaSeek to find the right aggregation of sequences for your analysis, and then access the raw sequencing data.",
   "author": "Nick Brown, Adrienne Hoarfrost",
   "license": "MIT",
-  "repository":"https://github.com/ahoarfrost/metaseek",
+  "repository": "https://github.com/ahoarfrost/metaseek",
   "devDependencies": {
     "axios": "^0.15.3",
     "babelify": "6.4.0",
@@ -12,7 +12,7 @@
     "browserify": "11.2.0",
     "connect-history-api-fallback": "1.1.0",
     "d3": "^3.5.17",
-    "firebase": "^3.9.1",
+    "firebase": "^3.9.0",
     "formsy-material-ui": "^0.5.0",
     "formsy-react": "^0.18.1",
     "gulp": "3.9.1",
@@ -23,6 +23,7 @@
     "gulp-notify": "2.2.0",
     "gulp-uglify": "1.4.2",
     "material-ui": "^0.15.4",
+    "rc-slider": "^8.1.3",
     "rd3": "^0.7.4",
     "react": "15.3.1",
     "react-dom": "15.3.1",
@@ -35,5 +36,9 @@
     "vinyl-buffer": "1.0.0",
     "vinyl-source-stream": "1.1.0",
     "watchify": "3.4.0"
+  },
+  "dependencies": {
+    "rc-slider": "^8.1.3",
+    "reactify": "^1.1.1"
   }
 }
