--- a/client/package.json
+++ b/client/package.json
@@ -28,8 +28,10 @@
     "react": "15.3.1",
     "react-dom": "15.3.1",
     "react-ga": "^2.1.2",
+    "react-input-autosize": "^1.1.4",
     "react-input-range": "^1.1.4",
     "react-router": "2.5.2",
+    "react-select": "^1.0.0-rc.5",
     "react-tap-event-plugin": "^1.0.0",
     "reactify": "^1.1.1",
     "uglifyify": "^4.0.1",
