--- a/client/package.json
+++ b/client/package.json
@@ -26,6 +26,7 @@
     "rc-slider": "^8.1.3",
     "rd3": "^0.7.4",
     "react": "15.3.1",
+    "react-collapsible": "^1.4.0",
     "react-dom": "15.3.1",
     "react-ga": "^2.1.2",
     "react-input-autosize": "^1.1.4",
