--- a/client/package.json
+++ b/client/package.json
@@ -22,6 +22,7 @@
     "gulp-imagemin": "^3.1.1",
     "gulp-notify": "2.2.0",
     "gulp-uglify": "1.4.2",
+    "lodash": "^4.17.4",
     "material-ui": "^0.16.0",
     "rc-slider": "^8.1.3",
     "rd3": "^0.7.4",
@@ -33,9 +34,10 @@
     "react-input-range": "^1.1.4",
     "react-router": "2.5.2",
     "react-select": "^1.0.0-rc.5",
-    "reactify": "^1.1.1",
     "react-tap-event-plugin": "^1.0.0",
+    "reactify": "^1.1.1",
     "uglifyify": "^4.0.1",
+    "victory": "^0.21.1",
     "vinyl-buffer": "1.0.0",
     "vinyl-source-stream": "1.1.0",
     "watchify": "3.4.0"
