First pass "they work"

--- a/client/package.json
+++ b/client/package.json
@@ -33,8 +33,9 @@
     "react-input-range": "^1.1.4",
     "react-router": "2.5.2",
     "react-select": "^1.0.0-rc.5",
-    "reactify": "^1.1.1",
     "react-tap-event-plugin": "^1.0.0",
+    "reactify": "^1.1.1",
+    "socket.io-client": "^2.0.3",
     "uglifyify": "^4.0.1",
     "vinyl-buffer": "1.0.0",
     "vinyl-source-stream": "1.1.0",
