--- a/client/package.json
+++ b/client/package.json
@@ -34,6 +34,7 @@
     "react-input-range": "^1.1.4",
     "react-router": "2.5.2",
     "react-select": "^1.0.0-rc.5",
+    "react-tagcloud": "^1.2.0",
     "react-tap-event-plugin": "^1.0.0",
     "reactify": "^1.1.1",
     "uglifyify": "^4.0.1",
