--- a/client/package.json
+++ b/client/package.json
@@ -36,6 +36,7 @@
     "react-select": "^1.0.0-rc.5",
     "react-tagcloud": "^1.2.0",
     "react-tap-event-plugin": "^1.0.0",
+    "react-tooltip": "^3.3.0",
     "reactify": "^1.1.1",
     "uglifyify": "^4.0.1",
     "victory": "^0.21.1",
