Fix broken gulp build - probably requires deleting node_modules / re-installing

--- a/client/package.json
+++ b/client/package.json
@@ -28,14 +28,14 @@
     "rd3": "^0.7.4",
     "react": "^15.5.0",
     "react-collapsible": "^1.4.0",
-    "react-dom": "15.3.1",
+    "react-dom": "^15.3.1",
     "react-ga": "^2.1.2",
     "react-input-autosize": "^1.1.4",
     "react-input-range": "^1.1.4",
     "react-router": "2.5.2",
     "react-select": "^1.0.0-rc.5",
     "react-tagcloud": "^1.2.0",
-    "react-tap-event-plugin": "^1.0.0",
+    "react-tap-event-plugin": "^2.0.1",
     "react-tooltip": "^3.3.0",
     "reactify": "^1.1.1",
     "uglifyify": "^4.0.1",
