--- a/client/package.json
+++ b/client/package.json
@@ -22,6 +22,7 @@
     "gulp-imagemin": "^3.1.1",
     "gulp-notify": "2.2.0",
     "gulp-uglify": "1.4.2",
+    "json-loader": "^0.5.7",
     "lodash": "^4.17.4",
     "material-ui": "^0.16.0",
     "material-ui-chip-input": "^0.15.0",
@@ -44,5 +45,8 @@
     "vinyl-buffer": "1.0.0",
     "vinyl-source-stream": "1.1.0",
     "watchify": "3.4.0"
+  },
+  "dependencies": {
+    "json-loader": "^0.5.7"
   }
 }
