--- a/client/package.json
+++ b/client/package.json
@@ -35,6 +35,7 @@
     "react-input-autosize": "^1.1.4",
     "react-input-range": "^1.1.4",
     "react-router": "2.5.2",
+    "react-scrollable-anchor": "^0.5.0",
     "react-select": "^1.0.0-rc.5",
     "react-tagcloud": "^1.2.0",
     "react-tap-event-plugin": "^2.0.1",
