--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
     "browserify": "11.2.0",
     "connect-history-api-fallback": "1.1.0",
     "d3": "^3.5.17",
+    "deck.gl": "^4.1.2",
     "firebase": "^3.9.0",
     "formsy-material-ui": "^0.5.0",
     "formsy-react": "^0.18.1",
@@ -24,6 +25,7 @@
     "gulp-uglify": "1.4.2",
     "json-loader": "^0.5.7",
     "lodash": "^4.17.4",
+    "luma.gl": "^4.0.2",
     "material-ui": "^0.16.0",
     "material-ui-chip-input": "^0.15.0",
     "rc-slider": "^8.1.3",
@@ -34,6 +36,7 @@
     "react-ga": "^2.1.2",
     "react-input-autosize": "^1.1.4",
     "react-input-range": "^1.1.4",
+    "react-map-gl": "^3.0.4",
     "react-router": "2.5.2",
     "react-scrollable-anchor": "^0.5.0",
     "react-select": "^1.0.0-rc.5",
