--- a/client/package.json
+++ b/client/package.json
@@ -32,6 +32,7 @@
     "rd3": "^0.7.4",
     "react": "^15.5.0",
     "react-collapsible": "^1.4.0",
+    "react-csv": "^1.0.8",
     "react-dom": "^15.3.1",
     "react-ga": "^2.1.2",
     "react-input-autosize": "^1.1.4",
