--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -4,6 +4,7 @@ Flask_RESTful==0.3.5
 Flask_SQLAlchemy==2.2
 cython==0.25.2
 pandas
+numpy
 beautifulsoup4==4.5.3
 python_dateutil==2.6.0
 sframe==2.1
